--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <title>A Gentle Introduction</title>
     <style type="text/css">
-      body {
-          margin: 0;
-      }
     </style>
     <script
       src="director.min.js">
